k8s/sample-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blog
  labels:
    app: blog
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-name: alb-smaple-app
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/subnets: x, y, z
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: blog
              servicePort: 80
